build: use ZGC instead of ParallelGC