@@ -2,16 +2,11 @@ FROM eclipse-temurin:21.0.4_7-jre
 
 ENV PATH_TO_JAR=/opt/eno-ws/eno-ws.jar
 WORKDIR /opt/eno-ws/
-COPY ./eno-ws/build/libs/*.jar $PATH_TO_JAR
-EXPOSE 8080
-
-RUN addgroup eno
-RUN useradd -g eno eno
-USER eno
+ADD ./eno-ws/build/libs/*.jar $PATH_TO_JAR
 
 ENV JAVA_TOOL_OPTIONS_DEFAULT \
     -XX:MaxRAMPercentage=75 \
-    -XX:+UseParallelGC
+    -XX:+UseZGC
 
 ENTRYPOINT [ "/bin/sh", "-c", \
     "export JAVA_TOOL_OPTIONS=\"$JAVA_TOOL_OPTIONS_DEFAULT $JAVA_TOOL_OPTIONS\"; \
